<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/core"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <TextView
            android:id="@+id/tvCoreNum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#aaaaaa"
            android:gravity="center_horizontal"
            android:text="@string/testCoreT"
            android:textSize="26sp"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            android:orientation="vertical">

        <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="100dip">

            <TextView
                    android:id="@+id/tvCoreQuestion"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dip"
                    android:singleLine="false"
                    android:text=""
                    android:textColor="#080808"/>
        </ScrollView>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <Button
                    android:id="@+id/btnCoreA"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/testCoreA"/>

            <Button
                    android:id="@+id/btnCoreB"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/testCoreB"/>

            <Button
                    android:id="@+id/btnCoreC"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/testCoreC"/>

            <Button
                    android:id="@+id/btnCoreD"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/testCoreD"/>
        </LinearLayout>

        <TextView
                android:id="@+id/tvCoreExplain"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:text=""
                android:textColor="#080808"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btnPre"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="90dip"
                android:text="@string/testCorePre"/>

        <Button
                android:id="@+id/btnSubmit"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="90dip"
                android:text="@string/testCoreSubmit"/>

        <Button
                android:id="@+id/btnNext"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="90dip"
                android:text="@string/testCoreNext"/>
    </LinearLayout>

</LinearLayout>