<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/login"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <TextView
            android:id="@+id/tv0"
            style="@style/title2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dip"
            android:paddingTop="20dip"
            android:text="@string/mobile_learning"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:background="@drawable/background_login_div_bg"
            android:orientation="vertical"
            android:padding="10dip">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="10dp">

            <TextView
                    style="@style/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tvUid"/>

            <EditText
                    android:id="@+id/etUid"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/loginUnHint"
                    android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <TextView
                    style="@style/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tvPwd"/>

            <EditText
                    android:id="@+id/etPwd"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/loginPwHint"
                    android:inputType="textPassword"
                    android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal"
                android:paddingRight="20dip">

            <CheckBox
                    android:id="@+id/cbRemember"
                    style="@style/text2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:checked="false"
                    android:text="@string/cbRemember"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingBottom="20dip"
                android:paddingRight="20dip"
                android:paddingTop="20dip">

            <Button
                    android:id="@+id/btnLogin"
                    style="@style/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="70dip"
                    android:text="@string/btnLogin"/>

            <Button
                    android:id="@+id/btnReg"
                    style="@style/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="70dip"
                    android:text="@string/btnReg"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:id="@+id/tv1"
            style="@style/text2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loginErrorMsg"
            android:visibility="visible"/>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/tvLogin_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/cat"/>
    </RelativeLayout>

</LinearLayout>