<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/register"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <TextView
            android:id="@+id/tv0"
            style="@style/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dip"
            android:paddingTop="20dip"
            android:text="@string/mobile_learning"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:background="@drawable/background_login_div_bg"
            android:orientation="vertical"
            android:padding="10dip">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="10dp">

            <TextView
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tvUid"/>

            <EditText
                    android:id="@+id/etUid2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <TextView
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tvPwd"/>

            <EditText
                    android:id="@+id/etPwd2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <TextView
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tvPwdConfig"/>

            <EditText
                    android:id="@+id/etPwdConfig2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.51"
                android:orientation="horizontal"
                android:paddingBottom="20dip"
                android:paddingTop="70dip">

            <Button
                    android:id="@+id/btnReg2"
                    style="@style/button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnReg"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:id="@+id/tv2"
            style="@style/text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dip"
            android:paddingTop="20dip"
            android:text=""/>

</LinearLayout>