<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/register"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageButton
                android:id="@+id/btnBackGrade"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="#00000000"
                android:src="@drawable/ic_left"/>

        <TextView
                android:id="@+id/tvGrade"
                style="@style/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dip"
                android:paddingLeft="72dip"
                android:paddingTop="20dip"
                android:text=""/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="80dip">

        <TextView
                android:id="@+id/nameGrade"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:singleLine="false"
                android:text=""/>

        <TextView
                android:id="@+id/numGrade"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/examGrade"
                android:textSize="24sp"/>

        <TextView
                android:id="@+id/comment"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/examEncourage"/>

        <TextView
                android:id="@+id/comment2"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/examEncourage"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btnHistory"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="30dip"
                android:text="@string/btnHistory"
                android:textSize="18sp"/>

        <Button
                android:id="@+id/btnAllHistory"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="30dip"
                android:text="@string/btnAllHistory"
                android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>