<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/register"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageButton
                android:id="@+id/btnBackPractice"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="#00000000"
                android:src="@drawable/ic_left"/>

        <TextView
                android:id="@+id/tvPractice"
                style="@style/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dip"
                android:paddingLeft="64dip"
                android:paddingTop="20dip"
                android:text="@string/btnPractice"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="80dip">

        <TextView
                android:id="@+id/namePractice"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text=""/>

        <TextView
                android:id="@+id/chapter_show"
                style="@style/text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:gravity="center_horizontal"
                android:text="@string/tvSpinner"
                android:textSize="20sp"/>

        <Spinner
                android:id="@+id/spinner_chapter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="20dip"/>
    </LinearLayout>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dip"
            android:gravity="center"
            android:orientation="vertical">

        <Button
                android:id="@+id/btnStartPractice"
                style="@style/button"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="30dip"
                android:text="@string/btnStartPractice"/>
    </RelativeLayout>

</LinearLayout>